[gd_scene load_steps=6 format=2]

[ext_resource path="res://Shop_Screen/imgs/Shop_Background.png" type="Texture" id=1]
[ext_resource path="res://Shop_Screen/Shop_Screen.gd" type="Script" id=2]
[ext_resource path="res://Shop_Screen/Camera.gd" type="Script" id=3]
[ext_resource path="res://Base_Systems/Base_Parts/Theme/Game_Theme.tres" type="Theme" id=4]
[ext_resource path="res://Base_Systems/Base_Parts/Game_Button.gd" type="Script" id=5]

[node name="Background" type="TextureRect"]
margin_right = 2050.0
margin_bottom = 2050.0
theme = ExtResource( 4 )
texture = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tile_Area" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera" type="Camera2D" parent="."]
offset = Vector2( 300, 600 )
anchor_mode = 0
current = true
limit_left = 0
limit_top = 0
limit_right = 4800
limit_bottom = 4800
editor_draw_limits = true
script = ExtResource( 3 )

[node name="UI_Layer" type="CanvasLayer" parent="Camera"]

[node name="Upgrade_Button" type="Button" parent="Camera/UI_Layer"]
margin_left = 10.0
margin_top = 150.0
margin_right = 211.0
margin_bottom = 190.0
theme = ExtResource( 4 )
text = "Geschäft Erweitern"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Construct_Wall" type="Button" parent="Camera/UI_Layer"]
margin_left = 10.0
margin_top = 200.0
margin_right = 210.0
margin_bottom = 240.0
theme = ExtResource( 4 )
text = "Mauer- / Türbau"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Construct_Room" type="Button" parent="Camera/UI_Layer"]
margin_left = 10.0
margin_top = 250.0
margin_right = 210.0
margin_bottom = 290.0
theme = ExtResource( 4 )
text = "Neuer Raum"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Destroy_Button" type="Button" parent="Camera/UI_Layer"]
margin_left = 10.0
margin_top = 370.0
margin_right = 210.0
margin_bottom = 410.0
theme = ExtResource( 4 )
text = "Abreißen"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hire_Button" type="Button" parent="Camera/UI_Layer"]
margin_left = 10.0
margin_top = 520.0
margin_right = 210.0
margin_bottom = 560.0
theme = ExtResource( 4 )
text = "Arbeiter Einstellen"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Layoff_Button" type="Button" parent="Camera/UI_Layer"]
margin_left = 10.0
margin_top = 570.0
margin_right = 210.0
margin_bottom = 610.0
theme = ExtResource( 4 )
text = "Arbeiter Entlassen"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
